...

        </TableLayout>

    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="350dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:onClick="logOut"
...
