...
        app:layout_constraintBottom_toTopOf="@+id/reviewIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:onClick="goToProfileView"
...
